--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "version": 2,
   "name": "hi-chat-backend",
   "functions": {
-    "server.js": {
+    "api/index.js": {
       "runtime": "@vercel/node@3",
       "maxDuration": 60
     }
@@ -10,7 +10,7 @@
   "rewrites": [
     {
       "source": "/(.*)",
-      "destination": "/server.js"
+      "destination": "/api/index.js"
     }
   ],
   "env": {
