--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "hi-chat-backend",
   "version": "1.0.0",
   "description": "Backend server for Hi Chat application with real-time messaging, voice calls, and file sharing",
-  "main": "server.js",
+  "main": "server-socketio-complete.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
+    "start": "node server-socketio-complete.js",
+    "dev": "nodemon server-socketio-complete.js",
     "test": "jest",
     "lint": "eslint .",
     "seed": "node scripts/seed.js"
