--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "validator": "^13.11.0",
     "sharp": "^0.32.5",
     "uuid": "^9.0.0",
-    "crypto": "^1.0.1"
+    "crypto": "^1.0.1",
+    "cloudinary": "^1.41.0",
+    "multer-storage-cloudinary": "^4.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1",
